# nsec-badge

./: .clang-format  .clang-tidy  .cqfdrc  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIB.md  LICENSE  Makefile  README.md  neopixel.h  partitions_nsec.csv  platformio.ini  requirements.txt  sdkconfig.addon.defaults  sdkconfig.conference.defaults  sdkconfig.ctf.defaults  sdkconfig.defaults
.reuse/: dep5
addon-components/esp-cryptoauthlib/: CMakeLists.txt  Kconfig
addon-components/esp-cryptoauthlib/cryptoauthlib/: LICENSE
addon-components/esp-cryptoauthlib/cryptoauthlib/app/tng/: readme.md
addon-components/esp-cryptoauthlib/cryptoauthlib/lib/: calib.7z
addon-components/esp-cryptoauthlib/cryptoauthlib/lib/calib/: calib_execution.c  calib_privwrite.c  calib_sha.c
addon-components/esp-cryptoauthlib/cryptoauthlib/lib/hal/: hal_gpio_harmony.c
addon-components/esp-cryptoauthlib/cryptoauthlib/lib/mbedtls/: atca_mbedtls_wrap.c
addon-components/esp-cryptoauthlib/port/: atca_cfgs_port.c  atca_config.h
boards/: Nsec2024.json  Nsec2024ProtoV1.json  Nsec2024ProtoV1.json.license  Nsec2025.json.license
components/badge/: CMakeLists.txt  badge.cpp  badge.hpp  globals.cpp  globals.hpp  id.hpp
components/badge-dock/: CMakeLists.txt  dock_detector.cpp  dock_detector.hpp
components/badge-led-strip/: CMakeLists.txt  strip_animator.cpp  strip_animator.hpp
components/cmd/: CMakeLists.txt  console.c  console.cpp  console.h
components/cmd_nvs/: CMakeLists.txt
components/off_the_addon/: CMakeLists.txt  ota_README.md  ota_actions.cpp  ota_actions.h  ota_init.cpp  ota_init.h
components/reaction_time/: CMakeLists.txt  badge_png.h  level_gen.sh  reaction_time.c  reaction_time.h
components/reaction_time/badge_png/: generate.sh
components/save/: CMakeLists.txt  save.cpp  save.h
ctf-components/codenames/: CMakeLists.txt  codenames.cpp  codenames.h
ctf-components/ir/: CMakeLists.txt  ir.cpp  ir.h
ctf-components/modbus/: CMakeLists.txt  modbus.cpp  modbus.h
ctf-components/protocol_examples_common/: CMakeLists.txt
ctf-components/quantum/: CMakeLists.txt  calibration.cpp  calibration.h  qkd.cpp  qkd.h  quantum.cpp  quantum.h  quantum_gates.cpp  quantum_gates.h  safe_unlock.cpp  safe_unlock.h
ctf-components/reverse/: CMakeLists.txt  idf_component.yml  reverse.cpp  reverse.h
ctf-components/wifi/: CMakeLists.txt  wifi.cpp  wifi.h
doc/: NOTES.md
dock-code/: CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.esp32-s3-devkitc-1
dock-code/lib/ssd1306/: CMakeLists.txt  Kconfig.projbuild  LICENSE  badge_ssd1306_helper.cpp  badge_ssd1306_helper.hpp  ssd1306_i2c_legacy.c  ssd1306_spi.c
dock-code/src/: CMakeLists.txt
dock-code/src/codenames/: CMakeLists.txt  codenames.cpp  codenames.h
dock-code/src/console/: console.cpp  console.h
dock-code/src/main/: CMakeLists.txt  main.cpp
dock-code/src/qkd/: CMakeLists.txt  qkd.cpp  qkd.h
dock-code/src/safe/: CMakeLists.txt  safe.cpp  safe.h
esp32/: .gitignore  CMakeLists.txt  CONTRIB.md  partitions.csv  sdkconfig  sdkconfig.README.md  sdkconfig.defaults
esp32/components/badge_mesh/: CMakeLists.txt  Kconfig  cmd_badge_mesh.cpp  cmd_badge_mesh.h
esp32/components/badge_mesh/badge/mesh/: config.cpp  config.h  host.cpp  host.h  main.cpp  main.h  models.cpp  models.h  network.cpp  network.h  ops.cpp  ops.h
esp32/components/badge_mesh/badge/mesh/ops/: census.cpp  census.h  info.cpp  info.h  neopixel.cpp  neopixel.h  ping.cpp  ping.h  realtimeled.cpp  realtimeled.h
esp32/components/challenges_storage/: CMakeLists.txt  challenges_storage.cpp  flash_operations.cpp  flash_operations.h  ota_operations.cpp  ota_operations.h  provision_README.md  spi_operations.cpp  spi_operations.h  storage_settings.h
esp32/components/cmd/: CMakeLists.txt  cmd.c  cmd.cpp  cmd.h  cmd_decl.h  cmd_hidden.cpp  cmd_hidden.h  cmd_neopixel.c  cmd_neopixel.cpp  cmd_neopixel.h  cmd_wifi.c  cmd_wifi.cpp  cmd_wifi.h  console.c  console.h
esp32/components/graphics/: .gitignore  CMakeLists.txt  Kconfig.projbuild  graphics.c  graphics.h
esp32/components/graphics/tools/: compile-images-registry.py  compile-palette.py  compile-tilemap.py  convert-all.py  generate-palette.py  images_registry.py
esp32/components/rpg/: CMakeLists.txt  rpg.cpp  rpg.h  rpg_action.cpp  rpg_action.h  rpg_const.h  rpg_control.cpp  rpg_control.h  rpg_data.cpp  rpg_data.h  rpg_duck.cpp  rpg_duck.h  rpg_scene.cpp  rpg_scene.h  rpg_statusbar.cpp  rpg_statusbar.h
esp32/components/rpg/rpg/: Character.cpp  Character.h  ChestObject.cpp  ChestObject.h  Coordinates.cpp  Coordinates.h  KonamiHandler.cpp  KonamiHandler.h  MainCharacter.cpp  MainCharacter.h  Scene.cpp  Scene.h  SceneObject.h  TileObject.cpp  TileObject.h  TimerDevice.h  Viewport.cpp  Viewport.h
esp32/components/rpg/rpg/characters/: CharacterAngela.cpp  CharacterAngela.h  CharacterArcher.cpp  CharacterArcher.h  CharacterAristocrate.cpp  CharacterAristocrate.h  CharacterCharles.cpp  CharacterCharles.h  CharacterChloe.cpp  CharacterChloe.h  CharacterDancer.cpp  CharacterDancer.h  CharacterDog.cpp  CharacterDog.h  CharacterDuck.cpp  CharacterDuck.h  CharacterFarmer.cpp  CharacterFarmer.h  CharacterFil.cpp  CharacterFil.h  CharacterFisherman.cpp  CharacterFisherman.h  CharacterMerchant.cpp  CharacterMerchant.h  CharacterMonk.cpp  CharacterMonk.h  CharacterOldman.cpp  CharacterOldman.h  CharacterOldwoman.cpp  CharacterOldwoman.h  CharacterPunk.cpp  CharacterPunk.h  CharacterRed.cpp  CharacterRed.h  CharacterRetailer.cpp  CharacterRetailer.h  CharacterSailor.cpp  CharacterSailor.h  CharacterSoldier.cpp  CharacterSoldier.h  (+8 more)
esp32/components/rpg/rpg/data/: BlockedDataReader.cpp  BlockedDataReader.h  SceneDataReader.cpp  SceneDataReader.h  SceneInMemoryDataReader.cpp  SceneInMemoryDataReader.h
esp32/main/: CMakeLists.txt  Kconfig.projbuild  cmd.c  cmd.h  display.c  graphics.c  graphics.h  main.c  main.cpp
hw/: DESCRIPTION
main/: CMakeLists.txt  Kconfig.projbuild  addon-main.cpp  conf-main.cpp  ctf-main.cpp  main.cpp
nrf51/: .cproject  Makefile  animal_care.c  animal_care.h  app_glue.h  battery.c  (+35 more)
(+1458 files in other folders)
