idf_component_register(
    SRCS
        "rpg/Character.cpp"
        "rpg/ChestObject.cpp"
        "rpg/Coordinates.cpp"
        "rpg/KonamiHandler.cpp"
        "rpg/Scene.cpp"
        "rpg/TileObject.cpp"
        "rpg/Viewport.cpp"
        "rpg/data/BlockedDataReader.cpp"
        "rpg/data/SceneDataReader.cpp"
        "rpg/data/SceneInMemoryDataReader.cpp"
        "rpg/characters/CharacterAngela.cpp"
        "rpg/characters/CharacterArcher.cpp"
        "rpg/characters/CharacterAristocrate.cpp"
        "rpg/characters/CharacterCharles.cpp"
        "rpg/characters/CharacterChloe.cpp"
        "rpg/characters/CharacterDancer.cpp"
        "rpg/characters/CharacterDog.cpp"
        "rpg/characters/CharacterDuck.cpp"
        "rpg/characters/CharacterFarmer.cpp"
        "rpg/characters/CharacterFil.cpp"
        "rpg/characters/CharacterFisherman.cpp"
        "rpg/characters/CharacterMerchant.cpp"
        "rpg/characters/CharacterMonk.cpp"
        "rpg/characters/CharacterOldman.cpp"
        "rpg/characters/CharacterOldwoman.cpp"
        "rpg/characters/CharacterPunk.cpp"
        "rpg/characters/CharacterRed.cpp"
        "rpg/characters/CharacterRetailer.cpp"
        "rpg/characters/CharacterSailor.cpp"
        "rpg/characters/CharacterSoldier.cpp"
        "rpg/characters/CharacterVijay.cpp"
        "rpg/characters/CharacterYue.cpp"
        "rpg/characters/MainCharacter.cpp"
        "rpg/characters/MovingMixin.cpp"
        "rpg_action.cpp"
        "rpg_control.cpp"
        "rpg_duck.cpp"
        "rpg_statusbar.cpp"
        "rpg.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        buttons
        graphics
        infoscreen
        menu
)

add_custom_command(
    OUTPUT
        ${SPIFFS_DIR}/rpg/main.blocked
        ${SPIFFS_DIR}/rpg/main.scene
    COMMAND
        python ${COMPONENT_DIR}/../graphics/tools/compile-tilemap.py ${GRAPHICS_LIBRARY_DIR}/images-registry.txt ${GRAPHICS_LIBRARY_DIR}/rpg.main.scene.svg ${SPIFFS_DIR}/rpg/main.scene ${SPIFFS_DIR}/rpg/main.blocked
    DEPENDS
        ${GRAPHICS_LIBRARY_DIR}/images-registry.txt
        ${GRAPHICS_LIBRARY_DIR}/rpg.main.scene.svg
)

add_custom_target(rpg_main_scene DEPENDS ${SPIFFS_DIR}/rpg/main.scene)
add_dependencies(graphics_library rpg_main_scene)
